--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
 script:
   - ansible-lint --force-color -v tests/test.yml
   - ansible-lint --force-color -v tests/run_containers.yml
-  - ansible-lint --force-color -v tests/ubuntu.yml
+  - ansible-lint --force-color -v tests/recreate_containers.yml
   - ansible-lint --force-color -v tests/idempotency.yml
 
   - ansible-playbook -t all,debug -D tests/run_containers.yml
