--- a/tests/run_containers.yml
+++ b/tests/run_containers.yml
@@ -27,7 +27,7 @@
         volumes: "{{ item.volumes }}"
         image_name: "{{ item.image_name }}"
         src: "{{ item.src }}"
-        hostgroups: "{{ item.groups }}"
+        member_of_groups: "{{ item.member_of_groups }}"
 
 - name: modify containers
   hosts: testnodes
