--- a/tests/vars/main.yml
+++ b/tests/vars/main.yml
@@ -12,11 +12,10 @@ docker:
         member_of_groups:
           - testnodes
           - python3_hosts
+          - ubuntu
 
       - container_name: centos-7
         image_name: centos-7-image
         src: centos-7
         volumes:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
-        member_of_groups:
-          - testnodes
