--- a/.travis.yml
+++ b/.travis.yml
@@ -33,19 +33,21 @@ script:
   - ansible-lint --force-color -v tests/docker-ce.yml
   - ansible-lint --force-color -v tests/idempotency.yml
 
+  - ansible-playbook -t all,debug -D tests/test.yml
+
   - ansible-playbook -t all,debug -D tests/run_containers.yml
   - ansible-playbook -t all,debug -D tests/run_containers.yml | tee /tmp/idempotency.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
 
   - ansible-playbook -t all,debug -D tests/recreate_containers.yml
 
+  - ansible-playbook -t all,debug -D tests/docker.yml
+  - ansible-playbook -t all,debug -D tests/docker.yml | tee /tmp/idempotency.tee
+  - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
+
   - ansible-playbook -t all,debug -D tests/docker-ce.yml
   - ansible-playbook -t all,debug -D tests/docker-ce.yml | tee /tmp/idempotency.tee
   - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
   
-  - ansible-playbook -t all,debug -D tests/test.yml
-
-  - ansible-playbook -t all,debug -D tests/idempotency.yml | tee /tmp/idempotence.tee
-  - "! grep -E 'ok=.*changed=[^0].*unreachable=.*failed=' /tmp/idempotence.tee"
 after_script:
   - ls -lR
