--- a/tests/docker.yml
+++ b/tests/docker.yml
@@ -19,18 +19,36 @@
         member_of_groups: "{{ item.member_of_groups }}"
         recreate: true
 
-- name: install docker-ce
+- name: install docker on ubuntu
   hosts: ubuntu
   roles:
     - role: mafalb.docker/daemon
-      docker_package: docker-ce
 
   tasks:
     - name: get version of docker client
       check_mode: true
       changed_when: false
       package:
-        name: docker-ce
+        name: docker.io
+        state: present
+      register: _docker_package
+
+    - name: check docker version
+      assert:
+        that:
+          - not _docker_package.changed
+
+- name: install docker
+  hosts: testnodes,!ubuntu
+  roles:
+    - role: mafalb.docker/daemon
+
+  tasks:
+    - name: get version of docker client
+      check_mode: true
+      changed_when: false
+      package:
+        name: docker
         state: present
       register: _docker_package
 
