--- a/tests/vars/main.yml
+++ b/tests/vars/main.yml
@@ -19,3 +19,6 @@ docker:
         src: centos-7
         volumes:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
+        member_of_groups:
+          - testnodes
+          - centos
