try an apt-get update before installing

--- a/tests/docker.yml
+++ b/tests/docker.yml
@@ -21,6 +21,10 @@
 
 - name: install docker on ubuntu
   hosts: ubuntu
+  pre_tasks:
+    apt:
+      update_cache: true
+
   roles:
     - role: mafalb.docker/daemon
 
