experiment with cache_valid_time and package wrapper

--- a/daemon/tasks/main.yml
+++ b/daemon/tasks/main.yml
@@ -19,6 +19,7 @@
   package:
     name: "{{ docker.package }}"
     state: present
+    cache_valid_time: 86400
 
 - name: docker service is running
   when: not ansible_virtualization_type == 'docker'
