--- a/tests/vars/main.yml
+++ b/tests/vars/main.yml
@@ -6,7 +6,7 @@ docker:
     containers:
       - container_name: xenial
         image_name: xenial_image 
-        src: ubuntu-16
+        src: ubuntu-16-python3
         volumes:
         - /sys/fs/cgroup:/sys/fs/cgroup:ro
         member_of_groups:
