--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,7 +1,7 @@
 - name: mafalb.ansible_ci
   src: https://github.com/mafalb/ansible-ansible_ci
-  branch: origin/dev
+  version: origin/dev
 
 - name: mafalb.ansible
   src: https://github.com/mafalb/ansible-ansible
-  branch: origin/dev
+  version: origin/dev
