--- a/tests/docker-ce.yml
+++ b/tests/docker-ce.yml
@@ -28,6 +28,7 @@
   tasks:
     - name: get version of docker client
       check_mode: true
+      retries: 0
       package:
         name: docker-ce
         state: present
