trying to satisfy ansible-lint

--- a/tests/docker-ce.yml
+++ b/tests/docker-ce.yml
@@ -28,7 +28,9 @@
   tasks:
     - name: get version of docker client
       check_mode: true
-      retries: 1
+      register: _version
+      until: _version is succeeded
+      retries: 0
       package:
         name: docker-ce
         state: present
